; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_process.c_stop_this_cpu.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_process.c_stop_this_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @stop_this_cpu(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 (...) @local_irq_disable()
  %4 = call i32 (...) @smp_processor_id()
  %5 = call i32 @set_cpu_online(i32 %4, i32 0)
  %6 = call i32 (...) @disable_local_APIC()
  br label %7

7:                                                ; preds = %13, %1
  %8 = call i32 (...) @smp_processor_id()
  %9 = call i64 @hlt_works(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %7
  %12 = call i32 (...) @halt()
  br label %13

13:                                               ; preds = %11, %7
  br label %7
}

declare dso_local i32 @local_irq_disable(...) #1

declare dso_local i32 @set_cpu_online(i32, i32) #1

declare dso_local i32 @smp_processor_id(...) #1

declare dso_local i32 @disable_local_APIC(...) #1

declare dso_local i64 @hlt_works(i32) #1

declare dso_local i32 @halt(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
